--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Home
             </a>
-            <a href="/profile"
+            <a href="/profile/<%= currentUser %> "
                class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Profile
             </a>
@@ -61,17 +61,18 @@
 
 
 <!-- section side  -->
+
+
+
 <section class="flex flex-row flex-wrap justify-center px-10  ">
     <!-- Card start -->
+    <% for( let index = 0; index < blogs.length; index++ ) { %>
       <div class="transition-all duration-150 flex w-full px-3  py-6 md:w-1/2 lg:w-1/3 ">
         <div class="flex flex-col items-stretch min-h-full pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
           
           <hr class="border-gray-300" />
           <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, magni
-            fugiat, odit incidunt necessitatibus aut nesciunt exercitationem aliquam
-            id voluptatibus quisquam maiores officia sit amet accusantium aliquid
-            quo obcaecati quasi.
+            <%= blogs[index].blogMessage %> 
           </p>
           <hr class="border-gray-300" />
           <div class="px-4 py-2 mt-2">
@@ -83,8 +84,8 @@
                   alt="user_image"
                 />
                 <div class="flex flex-col mx-2">
-                  <a href="" class="font-semibold text-gray-700 hover:underline">
-                    nishanth bhai 
+                  <a href="profile/<%= blogs[index].username %> " class="font-semibold text-gray-700 hover:underline">
+                    <%= blogs[index].username %> 
                   </a>
                   <span class="mx-1 text-xs text-gray-600">date haku</span>
                 </div>
@@ -97,7 +98,7 @@
         </div>
         </div>
       </div>
-      
+      <% } %>
        
       
       
