--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,14 +68,12 @@
     <!-- Card start -->
     <% for( let index = 0; index < blogs.length; index++ ) { %>
       <div class="transition-all duration-150 flex w-full px-3  py-6 md:w-1/2 lg:w-1/3 ">
-        <div class="flex flex-col items-stretch min-h-full pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
+        <div class="flex flex-col items-stretch min-h-full pt-2 pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
           
-          <hr class="border-gray-300" />
-          <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
-            <%= blogs[index].blogMessage %> 
-          </p>
-          <hr class="border-gray-300" />
-          <div class="px-4 py-2 mt-2">
+          
+          
+          
+          <div class="px-5 py-2 mt-2 ">
             <div class="flex items-center justify-between">
               <div class="flex items-center flex-1">
                 <img
@@ -83,16 +81,19 @@
                   src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
                   alt="user_image"
                 />
-                <div class="flex flex-col mx-2">
+                <div class="flex flex-col mx-2  ">
                   <a href="profile/<%= blogs[index].username %> " class="font-semibold text-gray-700 hover:underline">
                     <%= blogs[index].username %> 
                   </a>
                   <span class="mx-1 text-xs text-gray-600">date haku</span>
                 </div>
               </div>
-              <p class="mt-1 text-xs text-gray-600">time read ago haku illare beda</p>
+              <p class="mt-1 text-xs text-gray-600">time read ago</p>
             </div>
-            <form class="flex justify-end" action="" method="">
+            <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
+              <%= blogs[index].blogMessage %> 
+            </p>
+            <form class="flex justify-center my-2" action="" method="">
                 <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
             </form>
         </div>
