--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('./boilerplate/header.ejs') %> 
 <body>
-    <section class="h-screen">
+    <section class="h-screen bg-blue-600">
         <div class="px-6 h-full text-gray-800">
           <div
             class="flex xl:justify-center lg:justify-between justify-center items-center flex-wrap h-full g-6"
@@ -9,18 +9,20 @@
               class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
             >
               <img
-                src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-                class="w-full"
+                src="https://source.unsplash.com/random/800×534/?code,blue"
+                class="w-full h-5/6 border-solid border-4 border-blue-300 rounded-3xl "
                 alt="Sample image"
               />
             </div>
             <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
+              <h1 class=" text-6xl text-center text-white font-serif hover:drop-shadow-2xl py-6 "> Hello Blogger!!</h1>
+
               <form action="/authenticate" method="post">
                 <!-- Email input -->
                 <div class="mb-6">
                   <input
                     type="text"
-                    class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                    class="w-full px-4 py-2 text-xl font-normal text-gray-700  bg-white  border-solid border-4 border-blue-300 rounded-2xl"
                     id="exampleFormControlInput2"
                     placeholder="Enter Username"
                     name="username"
@@ -31,7 +33,7 @@
                 <div class="mb-6">
                   <input
                     type="password"
-                    class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                    class="w-full px-4 py-2 text-xl font-normal text-gray-700  bg-white  border-solid border-4 border-blue-300 rounded-2xl"
                     id="exampleFormControlInput2"
                     placeholder="Password"
                     name="password"
@@ -39,21 +41,23 @@
                 </div>
       
       
-                <div class="text-center lg:text-left">
+                <div class="text-center lg:text-left px-36 ">
                   <button
                     type="submit"
-                    class="inline-block px-7 py-3 bg-blue-600 text-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                    class="inline-block px-28 py-3 bg-white-600 text-white border border-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700  hover:border-white  hover:text-white hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
                   >
                     Login
                   </button>
-                  <p class="text-sm font-semibold mt-2 pt-1 mb-0">
-                    Don't have an account?
-                    <a
-                      href="/signup"
-                      class="text-red-600 hover:text-blue-700 focus:text-red-700 transition duration-200 ease-in-out"
-                      >Register</a
-                    >
-                  </p>
+                  
+               
+                <p class="text-lg font-semibold mt-2 pt-1 mb-0">
+                  Don't have an account?
+                  <a
+                    href="/signup"
+                    class="text-green-600 hover:text-blue-700 focus:text-red-700 transition duration-200 ease-in-out"
+                    >Register!!</a
+                  >
+                </p>
                 </div>
               </form>
             </div>
