--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('./boilerplate/header.ejs') %> 
-<body class=" bg-white flex flex-col min-h-screen">
+<body class=" bg-blue-700 flex flex-col min-h-screen">
   <%- include('./boilerplate/navbar.ejs') %> 
 <!-- 
 <div class="py-6">
@@ -15,7 +15,7 @@
 
 
 
-<section class="flex flex-row flex-wrap justify-center px-10  ">
+<section class="flex flex-row flex-wrap justify-center px-24  ">
     <!-- Card start -->
     <% for( let index = 0; index < blogs.length; index++ ) { %>
       <div class="transition-all duration-150 flex w-full px-3  py-6 md:w-1/2 lg:w-1/3 ">
@@ -50,11 +50,30 @@
         </div>
         </div>
       </div>
+      
       <% } %>
-      
-      
-      
+     
 </section>
+<!-- this is the post form -->
+
+
+<div class="px-8 py-2 ">
+  <form action="">
+    <div class="bg-white p-4 rounded-lg shadow-md px-4">
+      <div class="text-gray-700 font-medium text-lg mb-4 flex justify-center "><h1 class="text-3xl" > Write your post here!!</h1></div>
+      <input placeholder="write your content!! " type="text" class="block w-full py-8 px-4 rounded-md bg-white border border-gray-300 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+      <div class="flex justify-center py-2">
+        <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Post
+        </button>
+      </div>
+      </div>
+    
+  </form>
+</div>
+
+ 
+
+
 
 <footer class="mt-auto">
     <div class="px-10 py-8 bg-slate-100 ">
