--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -12,7 +12,7 @@
     <!--Title illi-->
     <div class="font-sans">
       
-          <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Post title haku</h1>
+          <!-- <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Post title haku</h1> -->
           <p class="text-sm md:text-base font-normal text-gray-600">Date haku illi</p>
     </div>
     <!-- profile haku bekidre illare beda -->
@@ -28,12 +28,12 @@
         />
         <div class="flex flex-col mx-2">
           <a href="" class="font-semibold text-gray-700 hover:underline">
-            nishanth bhais 
+            <%=blogv.username %>
           </a>
           <span class="mx-1 text-xs text-gray-600">date haku</span>
         </div>
       </div>
-      <p class="mt-1 text-xs text-gray-600">time read ago haku illare beda</p>
+      <p class="mt-1 text-xs text-gray-600"></p>
     </div>
     <form class="flex justify-evenly" action="" method="">
         <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
