--- a/views/boilerplate/navbar.ejs
+++ b/views/boilerplate/navbar.ejs
@@ -18,10 +18,12 @@
                class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Home
             </a>
-            <a href="/profile/<%= currentUser %> "
+            <% if(currentUser) {%> 
+            <a href="/profile/<%=currentUser.username%> "
                class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Profile
             </a>
+            <% } %> 
         </div>
        
         <div class="relative mx-auto text-gray-600 lg:block hidden">
