--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -37,7 +37,7 @@
       <p class="py-6"> <%= blogv.blogMessage %> </p>
     </div>
     <div>
-      <form class="flex justify-evenly" action="" method="">
+      <form class="flex justify-evenly" action="/comment/<%=blogv.id%>" method="post">
         <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
     </form>
     </div>
