--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,7 +33,7 @@
       <div class="text-center">
         <h1 class="text-2xl">MY POSTS</h1>
         <!-- POST HERE TAKE FROM DB AND DISPLAY HERE -->
-        <% for( let index = 0; index < profile.length; index++ ) { %>
+        <% for( let index = 0; index < profile.blogs.length; index++ ) { %>
           <div class="transition-all duration-150  w-96 h-96 px-3  py-6 md:w-1/2 lg:w-1/3 ">
             <div class="flex flex-col items-stretch min-h-full pt-2 pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
               <div class="px-5 py-2 mt-2 ">
@@ -45,20 +45,18 @@
                       alt="user_image"
                     />
                     <div class="flex flex-col mx-2  ">
-                      <!-- <a href="profile/<%= profile[index].username %> " class="font-semibold text-gray-700 hover:underline">
-                        <%= profile[index].username %> 
-                      </a> -->
+                      
                       <span class="mx-1 text-xs text-gray-600">date haku</span>
                     </div>
                   </div>
                   <p class="mt-1 text-xs text-gray-600">time read ago</p>
                 </div>
                 <p class="flex flex-row flex-wrap w-full px-4 py-6 overflow-hidden text-sm text-justify text-gray-700">
-                  <%= profile[index].blogMessage %> 
+                  <%= profile.blogs[index].blogMessage %> 
                 </p>
                 <div class="relative ">
                   <div class=" inset-y-0 bottom-0 left-0 right-0  justify-center items-end">
-                    <form class="flex justify-center my-2" action="./index/<%= profile[index].id%>" method="">
+                    <form class="flex justify-center my-2" action="./index/<%= profile.blogs[index].id%>" method="">
                       <button type="submit" class="inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
                     </form>
                   </div>
