--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -37,11 +37,11 @@
       <p class="py-6"> <%= blogv.blogMessage %> </p>
     </div>
     
-      <div class="flex mx-auto items-center  border-blue-400 justify-center shadow-lg mt-56  mb-4 max-w-lg">
+      <div class="flex mx-auto items-center  border-blue-400 justify-center shadow-lg mt-56 mb-4 max-w-lg">
         <form class="w-full max-w-xl  bg-white rounded-lg px-4 pt-2" method="post" action="/comment/<%=blogv.id%>">
            <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full md:w-full px-3 mb-2 mt-2">
-                 <input name="comment" class="bg-gray-100 rounded border border-purple-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
+                 <input name="comment" class="bg-gray-100 rounded border border-blue-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
               </div>
               <div class="w-full md:w-full flex items-stretch  px-3">
                  <div class="-mr-1">
@@ -50,8 +50,26 @@
               </div>
            </form>
         </div>
-     </div>
-    
+      </div>
+      <h3> comments</h3>
+      <div class=" w-full h-fit flex flex-col">
+        <div class="flex flex-row ml-10 py-2 ">
+          <img
+          class="object-cover h-10 rounded-full ml-2"
+          src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
+          alt="user_image"
+        />
+        <div class="mt-2 mx-2  ">
+          <a href="/profile/<%=blogv.username %>" class="font-semibold text-gray-700 hover:underline">
+            <%=blogv.username %>
+          </a>
+          <!-- <span class="mx-1 text-xs text-gray-600">date haku</span> -->
+        </div>
+         
+        </div>
+        <p class="mx-12 mb-4 ">nsajklfhsajkfhjsaghdjkash dljshadjl asljdjkas hdjkasjk dhasjkd jaskdn l</p>
+      </div>
+      <hr class="border border-t-2xl ">
 </div>
 </div>
 </div> 
@@ -59,7 +77,7 @@
 </div>
 </body> 
 
-<footer class=" mt-auto fixed bottom-0 w-full">
+<footer class=" mt-auto staitc bottom-0 w-full">
   <div class="px-10 py-8 bg-slate-100 ">
       <p class="text-gray-400 text-center">By Nishanth and Mehul &copy;copyright reserved 2023 </p>
   </div>
