--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -41,7 +41,7 @@
         <form class="w-full max-w-xl  bg-white rounded-lg px-4 pt-2" method="post" action="/comment/<%=blogv.id%>">
            <div class="flex flex-row  mb-6">
               <div class="w-full md:w-full px-auto mb-2 mt-2 ">
-                 <input name="comment" class="bg-gray-100 rounded border border-blue-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
+                 <input name="comment" class="bg-gray-100 rounded border border-purple-500 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
               </div>
               <div class="w-full md:w-full flex items-stretch  px-3">
                  <div class="flex flex-row align items-center">
