--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,7 +56,7 @@
                 </p>
                 <div class="relative ">
                   <div class=" inset-y-0 bottom-0 left-0 right-0  justify-center items-end">
-                    <form class="flex justify-center my-2" action="./index/<%= profile.blogs[index].id%>" method="">
+                    <form class="flex justify-center my-2" action="/index/<%= profile.blogs[index].id%>" method="">
                       <button type="submit" class="inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-500 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
                     </form>
                   </div>
